--- a/日志汇总归纳工具.md
+++ b/日志汇总归纳工具.md
@@ -1,4 +1,4 @@
-## 探索日志的奥秘 - 归纳汇总 ##
+## 探索日志的奥秘 - 日志归纳汇总 ##
 ###背景###
 在[上一篇文章](http://blog.csdn.net/cameling_yang/article/details/50198753)中，我们谈到了**日志模版**，以及一个可以帮助我们自动获得日志模版的工具。在这篇文章里，我们介绍下利用模版可以进行的一种最直接的分析：**日志的归纳汇总**。
 
